# solo5

./: GNUmakefile  Makefile.common  configure.sh
elftool/: GNUmakefile
opam/: solo5-bindings-hvt.opam  solo5-bindings-spt.opam  solo5-bindings-virtio.opam  solo5-bindings-xen.opam  solo5-config-platform-cross-aarch64.opam  solo5-config-platform-host.opam  solo5.opam
scripts/: solo5-config.sh.in
tests/: Makefile.tests
toolchain/: GNUmakefile  pc.in
