opam-version: "2.0"
maintainer: "martin@lucina.net"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Martin Lucina <martin@lucina.net>"
  "Ricardo Koller <kollerr@us.ibm.com>"
]
homepage: "https://github.com/solo5/solo5"
bug-reports: "https://github.com/solo5/solo5/issues"
license: "ISC"
dev-repo: "git+https://github.com/solo5/solo5.git"
build: [
  ["./configure.sh" 
    "--prefix=%{prefix}%" 
    "--enable-targets=none"
    "--ocaml=static"
    "--platform=aarch64-linux-gnu" {solo5-config-cross-aarch64}
  ]
  [make "V=1"]
]
install: [make "V=1" "install-headers" "install-tools"]
depends: [
  "conf-pkg-config" {build & os = "linux"}
  "solo5-config-ocaml-static" {= version}
  ("solo5-config-host" {= version} | "solo5-config-cross-aarch64" {= version})
]
synopsis: "Solo5 sandboxed execution environment (common files)"
description: """
Solo5 is a sandboxed execution environment primarily intended
for, but not limited to, running applications built using various
unikernels (a.k.a.  library operating systems).

This package provides the Solo5 header files and tools common to
all Solo5 targets."""
